# api/rest/oas_operations_gen.go
@@ -9,7 +9,9 @@ const (
 	ActOnThreadOperation           OperationName = "ActOnThread"
 	AddPeerOperation               OperationName = "AddPeer"
 	ApproveRequestOperation        OperationName = "ApproveRequest"
+	CreateAgentTokenOperation      OperationName = "CreateAgentToken"
 	CreateWebhookOperation         OperationName = "CreateWebhook"
+	DeleteAgentTokenOperation      OperationName = "DeleteAgentToken"
 	DeleteWebhookOperation         OperationName = "DeleteWebhook"
 	DeliverEventOperation          OperationName = "DeliverEvent"
 	DenyRequestOperation           OperationName = "DenyRequest"
@@ -18,6 +20,7 @@ const (
 	GetPeerOperation               OperationName = "GetPeer"
 	GetThreadOperation             OperationName = "GetThread"
 	GetWebhookOperation            OperationName = "GetWebhook"
+	ListAgentTokensOperation       OperationName = "ListAgentTokens"
 	ListPeersOperation             OperationName = "ListPeers"
 	ListRequestsOperation          OperationName = "ListRequests"
 	ListThreadsOperation           OperationName = "ListThreads"
